# livetemp

./: CMakeLists.txt  Dockerfile  README.md
app/: DebugSensor.vala  ISensor.vala  Internal.vala  Main.vala  Meting.vala  Netwerk.vala  SenseHatSensor.vala  Sensor.vala  main.c  main.h
cmake/: FindVala.cmake  ValaPrecompile.cmake
hat/: hat.h  sensor.c  sensor.h
